[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/window.gd" type="Script" id=1]

[node name="window" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )

[node name="vbox" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -14.0

[node name="edit" type="TextEdit" parent="vbox"]
margin_right = 1280.0
margin_bottom = 702.0
size_flags_horizontal = 3
size_flags_vertical = 3
readonly = true
syntax_highlighting = true
show_line_numbers = true
caret_block_mode = true

[node name="status_line_bg" type="Panel" parent="vbox"]
editor/display_folded = true
margin_top = 706.0
margin_right = 1280.0
margin_bottom = 706.0

[node name="status_line" type="HBoxContainer" parent="vbox/status_line_bg"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="left" type="HBoxContainer" parent="vbox/status_line_bg/status_line"]
margin_right = 1171.0
margin_bottom = 14.0
size_flags_horizontal = 3

[node name="separator-1" type="Label" parent="vbox/status_line_bg/status_line/left"]
margin_bottom = 14.0

[node name="window_number" type="Label" parent="vbox/status_line_bg/status_line/left"]
margin_left = 4.0
margin_right = 12.0
margin_bottom = 14.0
text = "1"

[node name="separator-2" type="Label" parent="vbox/status_line_bg/status_line/left"]
margin_left = 16.0
margin_right = 23.0
margin_bottom = 14.0
text = "|"

[node name="file_name" type="Label" parent="vbox/status_line_bg/status_line/left"]
margin_left = 27.0
margin_right = 113.0
margin_bottom = 14.0
text = "file_name.ext"

[node name="separator-3" type="Label" parent="vbox/status_line_bg/status_line/left"]
margin_left = 117.0
margin_right = 124.0
margin_bottom = 14.0
text = "|"

[node name="language" type="Label" parent="vbox/status_line_bg/status_line/left"]
margin_left = 128.0
margin_right = 184.0
margin_bottom = 14.0
text = "language"

[node name="right" type="HBoxContainer" parent="vbox/status_line_bg/status_line"]
margin_left = 1175.0
margin_right = 1280.0
margin_bottom = 14.0
alignment = 2

[node name="encoding" type="Label" parent="vbox/status_line_bg/status_line/right"]
margin_right = 58.0
margin_bottom = 14.0
text = "encoding"

[node name="separator-1" type="Label" parent="vbox/status_line_bg/status_line/right"]
margin_left = 62.0
margin_right = 69.0
margin_bottom = 14.0
text = "|"

[node name="line_char" type="Label" parent="vbox/status_line_bg/status_line/right"]
margin_left = 73.0
margin_right = 101.0
margin_bottom = 14.0
text = "1 : 1"

[node name="separator-2" type="Label" parent="vbox/status_line_bg/status_line/right"]
margin_left = 105.0
margin_right = 105.0
margin_bottom = 14.0
